[tool.poetry]
name = "masmeu"
version = "0.0.1"
description = ""
authors = ["naf <naf@auri.ga>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
xmltodict = "^0.12.0"
urllib3 = "^1.26.8"
configparser = "^5.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
